2009-07-16  Kent Tamura  <tkent@chromium.org>

Reviewed by Eric Seidel and Adam Barth.

        A test for for non-multipart file upload form submission.
        This test is disabled for non-Mac platforms because of beginDragWithFiles().
        <https://bugs.webkit.org/show_bug.cgi?id=26505>

        * fast/forms/get-file-upload-expected.txt: Added.
        * fast/forms/get-file-upload.html: Added.
        * platform/gtk/Skipped:
        * platform/qt/Skipped:
        * platform/win/Skipped:

2009-07-16  Kent Tamura  <tkent@chromium.org>

        Reviewed by Eric Seidel.

        Sends the basename of a selected file for non-multipart form submission.
        <https://bugs.webkit.org/show_bug.cgi?id=26505>

        Test: fast/forms/get-file-upload.html

        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::appendFormData):

Canonical link: https://commits.webkit.org/37630@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46006 268f45cc-cd09-0410-ab3c-d52691b4dbfc